--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h1 {
 }
 
 .form-group {
-    margin-bottom: auto px;
+    margin-bottom: 15 px;
 }
 
 label {
@@ -34,7 +34,7 @@ label {
 }
 
 input {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     border: none;
     border-radius: 5px;
